new data for sascore and qed multi obj optim added

--- a/notebooks/docking_analysis.ipynb
+++ b/notebooks/docking_analysis.ipynb
@@ -930,6 +930,40 @@
     "results = average_rings_for_methods(method_dirs)\n",
     "print(results)   # {'method1': 2.84, 'method2': 3.12}\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "10a90723",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CN(C)C[C@H](O)COc1ccc(Nc2cc(Nc3c(F)cccc3F)ncn2)cc1\n"
+     ]
+    }
+   ],
+   "source": [
+    "from rdkit import Chem\n",
+    "from rdkit.Chem import SDMolSupplier\n",
+    "\n",
+    "sup = SDMolSupplier(\"/Users/sanazkazeminia/Documents/mol_test_suite/data/other_models_data/Molsnapper_test/ligand.sdf\")\n",
+    "mol = [m for m in sup]\n",
+    "\n",
+    "smiles = Chem.MolToSmiles(mol[0])\n",
+    "print(smiles)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a3623cf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
